--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,4 +1,4 @@
 #WEBSOCKET EJEMPLO DE PRODUCCION
-WEBSOCKET_URL=wss://chat-backend.cemp2703.repl.co
+REACT_APP_WEBSOCKET_URL=wss://chat-backend.cemp2703.repl.co
 #WEBSOCKET EJEMPLO LOCAL
-WEBSOCKET_URL=ws://localhost:8080
+REACT_APP_WEBSOCKET_URL=ws://localhost:8080
